--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,25 @@ allprojects {
     repositories {
         jcenter()
         mavenCentral()
+
+        maven { url 'https://jitpack.io' }
+    }
+}
+
+subprojects {
+    apply plugin: 'kotlin'
+    apply plugin: 'maven'
+
+    sourceCompatibility = 1.8
+
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        classifier 'sources'
+        // We only want to publish the library!
+        from project(':library').sourceSets.main.allSource
+    }
+
+    artifacts {
+        archives sourcesJar
     }
 }
 
