--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -2,10 +2,14 @@ plugins {
     id 'org.jetbrains.kotlin.jvm'
 }
 
+repositories {
+    jcenter()
+}
+
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
-    compile project(':library')
+    compile project(':')
 }
 
 task runDemo(type: JavaExec) {
