--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ apply plugin: 'maven-publish'
 
 group 'com.deflatedpickle'
 archivesBaseName = 'tosuto'
-version '1.7.3'
+version '1.7.4'
 sourceCompatibility = 1.8
 
 repositories {
@@ -21,6 +21,8 @@ repositories {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+
+    implementation 'com.deflatedpickle:undulation'
 }
 
 task sourcesJar(type: Jar, dependsOn: classes) {
