--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ apply plugin: 'maven-publish'
 group 'com.deflatedpickle'
 archivesBaseName = 'tosuto'
 version '1.7.4'
-sourceCompatibility = 1.8
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 
 repositories {
     mavenCentral()
