--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     api 'com.deflatedpickle:undulation'
+    api 'com.deflatedpickle:marvin:'
     api 'org.oxbow:swing-bits:1.0.0-SNAPSHOT'
 }
 
