--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.7.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.21'
 
-    id 'com.diffplug.gradle.spotless' version '3.27.0'
+    id 'com.diffplug.spotless' version '6.19.0'
 }
 apply plugin: 'kotlin'
 apply plugin: 'maven-publish'
